--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,7 +3,7 @@ html, body, #root {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: rgb(60, 60, 60);
+  background-color: rgb(10, 10, 10);
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -14,6 +14,7 @@ html, body, #root {
 }
 
 .bruh {
+  color: white;
   position: absolute;
   top: 0%;
   left: 0%;
